# Deepchat

./: .env  Dockerfile  README.md  auth.py  config.py  docker-compose.yml  main.py  pyproject.toml  req.txt  views.py
database/: models.py
nginx/: Dockerfile
